@@ -1,3 +1,7 @@
+2006-09-17  Robert Ancell <robert.ancell@gmail.com>
+
+        * gnotski.c: Mark solved puzzles in the menu (Gnome Bug #111543).
+
 2006-09-17  Andreas Røsdal <andrearo@stud.ntnu.no>
 
         * gnotski.svg: Gnotski gets Tango graphics palette.
